--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -99,3 +99,28 @@ jobs:
         run: dotnet run --project _atom/_atom.csproj PushToNuget --skip --headless
         env:
           nuget-push-api-key: ${{ secrets.NUGET_PUSH_API_KEY }}
+  
+  PushToRelease:
+    needs: [ PackResults ]
+    runs-on: ubuntu-latest
+    steps:
+      
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
+      
+      - name: Download DecSm.Results
+        uses: actions/download-artifact@v4
+        with:
+          name: DecSm.Results
+          path: "${{ github.workspace }}/.github/artifacts/DecSm.Results"
+      
+      - name: PushToRelease
+        id: PushToRelease
+        run: dotnet run --project _atom/_atom.csproj PushToRelease --skip --headless
+        env:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
