chore: Updated nuget info

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,4 +1,5 @@
 <Project>
+
   <PropertyGroup>
     <Product>Results</Product>
     <Authors>Declan Smith</Authors>
@@ -13,10 +14,18 @@
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <NoWarn>$(NoWarn);CS1591;NU5104;RCS1001;RCS1003;RCS1123;</NoWarn>
-    <Deterministic>true</Deterministic>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <DebugType>embedded</DebugType>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\readme.md" Pack="true" PackagePath="\"/>
+    <None Include="../images/icon.png" Pack="true" PackagePath="\"/>
+    <None Include="../readme.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
+
 </Project>
