chore: Add filter to release job

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -104,6 +104,7 @@ jobs:
   PushToRelease:
     needs: [ PackResults, SetupBuildInfo ]
     runs-on: ubuntu-latest
+    if: contains(needs.SetupBuildInfo.outputs.build-version, '-') == false
     steps:
       
       - name: Checkout
